cm4all-workshop (2.0.29) unstable; urgency=low

  * fix crash after PostgreSQL host lookup failure
  * log database connection failures at the default verbosity

 --   

cm4all-workshop (2.0.28) unstable; urgency=low

  * cron: time zone support

 -- Max Kellermann <mk@cm4all.com>  Sat, 16 Sep 2017 11:46:41 -0000

cm4all-workshop (2.0.27) unstable; urgency=low

  * cron: fix hour check in scheduler
  * cron: fix time zone confusion; everything is UTC for now
  * cron: set next_run to 'infinity' for expired "@once" jobs

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 Sep 2017 20:51:09 -0000

cm4all-workshop (2.0.26) unstable; urgency=low

  * fix crash when database is unavailable during startup
  * cron: fix integer underflow in "@once" job delay
  * logger: fix off-by-one bug in log level check
  * systemd: start Workshop after PostgreSQL

 -- Max Kellermann <mk@cm4all.com>  Mon, 11 Sep 2017 18:04:21 -0000

cm4all-workshop (2.0.25) unstable; urgency=low

  * spawn: use the "systemd" controller
  * cron: apply random delay to all cron jobs
  * systemd: override the locale, fixes "_S_create_c_locale" error
  * systemd: enable crash dumps

 -- Max Kellermann <mk@cm4all.com>  Wed, 23 Aug 2017 10:36:35 -0000

cm4all-workshop (2.0.24) unstable; urgency=low

  * spawn: fix bogus pivot_root() error message
  * workshop: write failure to jobs table after timeout
  * translation: add packet MOUNT_ROOT_TMPFS

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Aug 2017 10:07:22 -0000

cm4all-workshop (2.0.23) unstable; urgency=low

  * spawn: attach to existing network namespace with NETWORK_NAMESPACE_NAME
  * spawn: allow unshare(), mount(), umount(), pivot_root()
  * migrate: new database migration tool
  * workshop: add column "enabled"
  * cron: support month and weekday names

 -- Max Kellermann <mk@cm4all.com>  Fri, 04 Aug 2017 17:04:17 -0000

cm4all-workshop (2.0.22) unstable; urgency=low

  * spawn: run the PID namespace init process as root