@@ -2,6 +2,7 @@ cm4all-workshop (2.0.29) unstable; urgency=low
 
   * fix crash after PostgreSQL host lookup failure
   * log database connection failures at the default verbosity
+  * migrate: schema support
 
  --   
 
